# nexus-pharma-fun

./: .gitignore  README.md
backend/: requirements.txt
backend/app/agents/: ad_graph.py
backend/tests/: test_health.py
client/: app.json  package.json
client/app/: _layout.tsx  result.tsx
client/app/(tabs)/: _layout.tsx  assets.tsx  create.tsx  index.tsx  projects.tsx  settings.tsx
client/components/: BenefitsList.tsx  ToneSelector.tsx
client/components/ui/: Button.tsx  Card.tsx  DisclaimerBanner.tsx  FormField.tsx  SectionHeader.tsx  StatusBadge.tsx  Stepper.tsx
client/constants/: api.ts  theme.ts
client/lib/: api.ts
client/store/: useAdStore.ts
client/types/: index.ts
mobile/: package.json
server/: pyproject.toml
server/app/: main.py
server/app/agents/: ad_graph.py
server/app/core/: config.py
server/app/media/: image_runner.py  jobs.py  prompts.py  store.py  video_runner.py
server/app/routers/: media.py
server/app/schemas/: media.py
server/media/jobs/: c21049c275fc.json
