[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "diffusers>=0.39.0",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.9",
    "pillow>=12.3.0",
    "protobuf>=7.35.1",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.22",
    "safetensors>=0.8.0",
    "sentencepiece>=0.2.2",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "transformers>=5.14.1",
    "typing-extensions>=4.16.0",
    "uvicorn[standard]>=0.51.0",
]
